tests/dataset/tpc-ds/compiler/rust/q98.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:09:38Z
#[derive(Default, Debug, Clone, PartialEq)]
struct StoreSale {
        ss_item_sk: i32,
        ss_sold_date_sk: i32,
        ss_ext_sales_price: f64,
}

#[derive(Default, Debug, Clone, PartialEq)]
struct Item {
        i_item_sk: i32,
        i_item_id: &'static str,
        i_item_desc: &'static str,
        i_category: &'static str,
        i_class: &'static str,
        i_current_price: f64,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct DateDim {
        d_date_sk: i32,
        d_date: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Store_sale {
    ss_item_sk: i32,
    ss_sold_date_sk: i32,
    ss_ext_sales_price: f64,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Item1 {
    i_item_sk: i32,
    i_item_id: &'static str,
    i_item_desc: &'static str,
    i_category: &'static str,
    i_class: &'static str,
    i_current_price: f64,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Date_dim {
    d_date_sk: i32,
    d_date: &'static str,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Key {
    item_id: &'static str,
    item_desc: &'static str,
    category: &'static str,
    class: &'static str,
    price: f64,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Item2 {
    ss: Store_sale,
    i: Item1,
    d: Date_dim,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Group {
    key: Key,
    items: Vec<Item2>,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Result {
    i_item_id: &'static str,
    i_item_desc: &'static str,
    i_category: &'static str,
    i_class: &'static str,
    i_current_price: f64,
    itemrevenue: i32,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Group3 {
    key: &'static str,
    items: Vec<Result>,
}

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash, PartialOrd, Ord)]
struct Result4 {
    class: &'static str,
    total: i32,
}

#[derive(Default, Debug, Clone, PartialEq, PartialOrd)]
struct Result5 {
    i_item_id: &'static str,
    i_item_desc: &'static str,
    i_category: &'static str,
    i_class: &'static str,
    i_current_price: f64,
    itemrevenue: i32,
    revenueratio: f64,
}

fn sum<T>(v: &[T]) -> T where T: std::iter::Sum<T> + Copy {
    v.iter().copied().sum()
}

fn _json<T: std::fmt::Debug>(value: &T) {
    println!("{:?}", value);
}

fn main() {
    let store_sales = vec![Store_sale { ss_item_sk: 1, ss_sold_date_sk: 1, ss_ext_sales_price: 50.0 }, Store_sale { ss_item_sk: 2, ss_sold_date_sk: 1, ss_ext_sales_price: 100.0 }];
    let item = vec![Item1 { i_item_sk: 1, i_item_id: "I1", i_item_desc: "desc1", i_category: "CatA", i_class: "Class1", i_current_price: 100.0 }, Item1 { i_item_sk: 2, i_item_id: "I2", i_item_desc: "desc2", i_category: "CatB", i_class: "Class1", i_current_price: 200.0 }];
    let date_dim = vec![Date_dim { d_date_sk: 1, d_date: "2000-02-01" }];
    let grouped = { let mut tmp2 = Vec::<Group>::new();for ss in &store_sales { for i in &item { if !(ss.ss_item_sk == i.i_item_sk) { continue; } for d in &date_dim { if !(ss.ss_sold_date_sk == d.d_date_sk) { continue; } let key = Key { item_id: i.i_item_id, item_desc: i.i_item_desc, category: i.i_category, class: i.i_class, price: i.i_current_price }; if let Some(tmp3) = tmp2.iter_mut().find(|g| g.key == key) { tmp3.items.push(Item2 {ss: ss.clone(), i: i.clone(), d: d.clone() }); } else { tmp2.push(Group { key: key, items: vec![Item2 {ss: ss.clone(), i: i.clone(), d: d.clone() }] }); } } } } let mut result = Vec::new(); for g in tmp2 { result.push(Result { i_item_id: g.key.item_id, i_item_desc: g.key.item_desc, i_category: g.key.category, i_class: g.key.class, i_current_price: g.key.price, itemrevenue: sum(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.ss_ext_sales_price); } tmp4 }) }); } result };
    let totals = { let mut tmp5 = std::collections::HashMap::new();for g in &grouped { let key = g.i_class; tmp5.entry(key).or_insert_with(Vec::new).push(g.clone()); } let mut tmp6 = Vec::<Group3>::new(); for (k,v) in tmp5 { tmp6.push(Group3 { key: k, items: v }); } tmp6.sort_by(|a,b| a.key.partial_cmp(&b.key).unwrap()); let mut result = Vec::new(); for cg in tmp6 { result.push(Result4 { class: cg.key, total: sum(&{ let mut tmp7 = Vec::new();for x in &cg.clone().items { tmp7.push(x.itemrevenue); } tmp7 }) }); } result };
    let result = { let mut tmp8 = Vec::new();for g in &grouped { for t in &totals { if !(g.i_class == t.class) { continue; } let tmp9 = Result5 { i_item_id: g.i_item_id, i_item_desc: g.i_item_desc, i_category: g.i_category, i_class: g.i_class, i_current_price: g.i_current_price, itemrevenue: g.itemrevenue, revenueratio: (g.itemrevenue * 100 as f64) / (t.total as f64) }; let tmp10 = (g.i_category, g.i_class, g.i_item_id); tmp8.push((tmp10, tmp9)); } } tmp8.sort_by(|a,b| a.0.partial_cmp(&b.0).unwrap()); let mut tmp11 = Vec::new(); for p in tmp8 { tmp11.push(p.1); } tmp11 };
    _json(&result);
    assert!(result == vec![Result5 { i_item_id: "I1", i_item_desc: "desc1", i_category: "CatA", i_class: "Class1", i_current_price: 100.0, itemrevenue: 50.0, revenueratio: 33.333333333333336 }, Result5 { i_item_id: "I2", i_item_desc: "desc2", i_category: "CatB", i_class: "Class1", i_current_price: 200.0, itemrevenue: 100.0, revenueratio: 66.66666666666667 }]);
}
